# randomizer

./: Cargo.toml  README.md  background.js  index.html  manifest.json  popup.js
pkg/: randomize.d.ts  randomize.js  randomize_bg.wasm
randomize/: background.js  index.html  manifest.json  popup.js
randomize/pkg/: package.json  randomize_bg.wasm.d.ts
src/: lib.rs
