[package]
name = "randomize"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
gloo-timers = { version = "0.3.0", features = ["futures"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde-wasm-bindgen = "0.6.5"

[lib]
crate-type = ["cdylib"]
